Remove IMenuItemHandler